feature #5497 clean some code : code quality rules compliance